[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workflow-builder"
version = "1.0.0"
description = "Auto-generate AI agent workflows from YAML configuration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "eentost", email = "eentost@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
web = [
    "playwright>=1.40.0",
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.0"
]
data = [
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0"
]
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0"
]
llm = [
    "langchain>=0.1.0",
    "openai>=1.3.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0"
]
security = [
    "bandit>=1.7.0",
    "python-nmap>=0.7.1"
]
bot = [
    "python-telegram-bot>=20.0"
]
all = [
    "playwright>=1.40.0",
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "langchain>=0.1.0",
    "openai>=1.3.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "bandit>=1.7.0",
    "python-nmap>=0.7.1",
    "python-telegram-bot>=20.0"
]

[project.scripts]
awb = "src.agent_workflow_builder:main"

[project.urls]
Homepage = "https://github.com/eentost/agent-workflow-builder"
Issues = "https://github.com/eentost/agent-workflow-builder/issues"
